# VeCo

./: .gitignore  Paper.txt  README.md  extract.py  ollama_test.py  pyproject.toml  rag_pipeline.py  requirements.txt  run_veco_venv.bat  run_veco_venv.ps1  setup.py  setup_venv.bat  setup_venv.ps1  setup_venv.sh  veco.py  veco_test.py  vector_db.json  whisper_test.py
Docker/: Dockerfile  requirements.txt  veco.py
Evaluation/: readme.md
Evaluation/Use_Case_1/: readme.md
Evaluation/Use_Case_1/1-Data/: 1-voicemail_speakers_text  3-voicemail_transcription.txt
Evaluation/Use_Case_1/2-Prompts/: 1-Prompt  2-Response_Without_Domain_Knowledge.txt  3-Response_With_Vectorized_Domain_Knowledge.txt
Evaluation/Use_Case_2/: readme.md
Evaluation/Use_Case_2/1-Reference_Model/: Event log for reference model.xes  create_reference_model.py  reference_model.pnml
Evaluation/Use_Case_2/2-Conformance_Checking/: conformance_checking.py  nonconforming_event_log.xes  urgent_note_procurement.pptx
Evaluation/Use_Case_2/3-LLM_Responses/: 1-Prompt.txt  2-Response_Without_Domain_Knowledge.txt  3-Response_With_Vectorized_Domain_Knowledge.txt
Old/: extract.py  extract_images_from_pdf.py  ollama_test.py  rag_pipeline.py  whisper_test.py
UML/: plantuml_component.txt
VeCo/: __init__.py  veco.py  veco_diarization.py
test/: veco_test.py  vector_db.json
veco_ai/: __init__.py  veco.py  veco_ai.py  veco_diarization.py
