[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veco-ai"
version = "0.1.0"
description = "Vectorization & RAG Toolkit"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = "CC0-1.0"
authors = [{ name = "Matthias Pohl" }, {name = "Yorck Zisgen"}]
keywords = ["rag", "vector database", "embeddings", "multimodal", "process mining"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Core dependencies (NumPy 2.2.6 + compatible pins)
dependencies = [
  # Numerics & core ML
  "numpy==2.2.6",
  "scipy>=1.13,<1.16",
  "torch>=2.1,<2.3",
  "torchaudio>=2.1,<2.3",
  "torchvision>=0.16,<0.18",
  "sentence-transformers==5.0.0",

  # Vector DB & media
  "faiss-cpu==1.11.0.post1",
  "moviepy==2.2.1",

  # NLP / STT / RAG
  "openai-whisper>=20231117,<20250000",
  "ollama==0.5.1",

  # Audio / DSP
  "librosa>=0.10,<0.11",
  "soundfile>=0.12,<0.13",
  "webrtcvad-wheels>=2.0.10,<2.1",

  # Vision / OCR / imaging
  "pytesseract>=0.3.10,<0.4",
  "Pillow==11.0.0",

  # Documents
  "pdfplumber>=0.11.0,<0.12",
  "python-docx==1.2.0",
  "python-pptx==1.0.2",

  # Misc
  "speechbrain>=0.5.15,<0.6",
  "tqdm>=4.66,<4.67",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
]

pic-describe = [
  "transformers>=4.37,<5",
  "sentencepiece>=0.1.99,<0.2",
  "sacremoses>=0.0.53,<0.1",
]

[project.urls]
Homepage = "https://github.com/MatthiasPohlAmberg/VeCo"
Source = "https://github.com/MatthiasPohlAmberg/VeCo"
Issues = "https://github.com/MatthiasPohlAmberg/VeCo/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["veco_ai*"]
